ola-parser/src/testdata/syntaxTests/inheritance/override/interface_exception/abstract_needed.sol
abstract contract I {
	fn f() external virtual;
}
contract C is I {
	fn f() external {}
}
// ----
// TypeError 9456: (75-99): Overriding fn is missing "override" specifier.
